2005-10-04 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18fregs.h, src/pic16/devices.inc,
	  device/lib/pic16/pics.all: added pic18f1320
	* src/pic16/pcode.c (mnem2key): fixed prototype's argument mismatch

2005-09-30 Raphael Neider <rneider AT web.de>

	* src/pic16/device.c (Pics16[]): moved device descriptions to devices.inc
	* src/pic16/devices.inc: NEW, provides device descriptions
	* src/pic16/gen.c (genInline): fixed handling of ';'-comments

2005-09-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (operandOperation): added GETABIT, GETBYTE, GETWORD and
	  GETHBIT

2005-09-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: updated Highest Order Bit documentation,
	  documented Any Order Bit, Higher Order Byte and Higher Order Word
	* src/SDCC.y: added tokens GETABIT, GETBYTE, GETWORD
	* src/SDCCast.c (optimizeGetHbit): updated to also accept bool=expr&(1<<n),
	  (optimizeGetAbit): new, to get any bit, not only the high bit,
	  (optimizeGetByte): new, to get a byte from a (long) int: expr>>(8*n),
	  (optimizeGetWord): new, to get a word from a long int: expr>>(8*n),
	  (isConformingBody): also check GETABIT, GETBYTE, GETWORD,
	  (decorateType): '&': also try GETABIT, GETBYTE, GETWORD optimization,
	    RIGHT_OP: also try GETBYTE, GETWORD optimization,
	    GETABIT, GETBYTE, GETWORD: decorate them,
	  (isShiftRightLitVal, isBitAndPowOf2): new helper functions,
	  (ast_print): added GETABIT, GETBYTE, GETWORD
	* src/SDCCcse.c (isSignedOp): added GETABIT, GETBYTE, GETWORD
	* src/SDCCicode.c (codeTable): added GETABIT, GETBYTE, GETWORD,
	  (geniCodeBinary): new generic binary icode,
	  (ast2iCode): added GETABIT, GETBYTE, GETWORD
	* src/port.h: updated comment for PORT.hasExtBitOp
	* src/mcs51/gen.c (genGetAbit): new, to get any single bit,
	  (genGetByte): new, to get a single byte,
	  (genGetWord): new, to get a word from a long,
	  (gen51Code): added GETABIT, GETBYTE, GETWORD